
Name: Segue ChangeLog



v. 1.3.4 (The Future) 
----------------------------------------------------
		
    * Bug Fix: #1177195  (Alex Chapin) 
    Discussion feedback now show site owner instead of addedby user	
		
    * Bug Fix: #1177199  (Alex Chapin) 
    Hide authors now works for both authenticated and unauthenticated users	
		
    * Bug Fix: #1120772  (Alex Chapin) 
    Typo in discussion settings explanation is fixed	
		
    * Bug Fix: #1164085  (Alex Chapin) 
    Segue class sites that are grouped will now display all the students in all
    theclasses included in the group.	
	

v. 1.3.3 (2005-01-14) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    Now Segue strips PHPSESSID tags from any urls saved to prevent accidental
    session hijacking when copy/pasting links from a browser without cookies 
		
    * Bug Fix:  (Adam Franco) 
    Now Segue doesn't force the cookie domain if we are not accessing segue from
    the domain specified in the config (either due to a configuration error or a
    vhostsetting) as that would make the cookie inaccessible.
		
    * Bug Fix: #1083127  (Adam Franco) 
    Added some additional error lines to be printed on email failure.
		
    * Bug Fix: #1083131  (Adam Franco) 
    Addedsome additional information lines to be printed during table creation.
		
    * Bug Fix:  (Adam Franco) 
    Database errors on connection will now not print the database password used
    unlessthe debug configuration option is set to 1.
		
    * Change:  (Adam Franco) 
    Date printing has been re-worked to support more timestamp formats. As well,
    configoptions have been added for customing date/time formats.
		
    * Bug Fix: #878641  (Adam Franco) 
    Removed some unused form fields.
	

v. 1.3.2 (2004-10-07) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    Replaced preview links in permissions window with a link to the new preview 
		