@@ -4,6 +4,10 @@
 	h1 {font-size: 18pt;}
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.3.4</h2><h3>The Future</h3><ul>
+		<li/> Change: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1185237&amp;group_id=82171&amp;atid=565237">
+        			#1185237</a> 
+			Default page now focuses to username field.
+		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
 	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1177195&amp;group_id=82171&amp;atid=565234">
         			#1177195</a> 
