@@ -2,6 +2,9 @@
 
 <changelog name="Segue ChangeLog">
 	<version number="1.3.4" date="The Future">
+		<change author='adam' ref='1185237' reftype='fr'>
+			Default page now focuses to username field.
+		</change>
 		<fix author='alex' ref='1177195' reftype='bug'>
 			Discussion feedback now show site owner instead of addedby user
 		</fix>	
